--- a/style.css
+++ b/style.css
@@ -10,35 +10,27 @@ Author URI: https://www.hanfy.site/
     padding:0;
     margin:0;
 }
-a{
-    text-decoration: none;
-    color: #000;
-}
-.clearfix:after{
-    content: '';
-    height: 0;
-    clear: both;
-    display: block;
-    visibility: hidden;
-}
 ul{
     list-style: none;
 }
-a:link a:hover a:active a:visited{
-    text-decoration: none;
-    color: #000000;!important;
-}
 body{
     min-width: 1080px;
-
+    width:100%;
 }
+a{
+    color: #000!important;
+}
+a:hover,a:link,a:active,a:visited{
+    text-decoration: none!important;
+}
+
 #main{
-    padding:20px 10%;
+    width: 1000px;
+    margin:0 auto;
 }
 #header{
     width: 100%;
     height:80px;
-    background: #c5c6ce;
     color: #000;
     line-height: 80px;
 }
@@ -59,24 +51,38 @@ body{
 #container{
     display: inline-block;
     color: #000;
+    margin-right: 25px;
+    width: 645px;
+    margin-top: 20px;
 }
 .post{
-    width:auto;
     height: 200px;
-    margin-left: 10px;
-    margin-right: 20px;
-    margin-top: 30px;
-    padding: 15px;
-    box-shadow: 0px 2px 1px #333;
-    opacity: 0.7;
+    margin-bottom: 30px;
+    padding: 0 15px 15px;
+    box-shadow: 0px 1px 1px #333;
+    background: #ffffff;
+}
+#the-title{
+    font-size: 20px;
+    display: inline-block;
+    padding:0;
+}
+.the-content{
+    width: 600px;
+    height: 120px;
+    overflow : hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
 }
 #sidebar{
-    float: right;
+    display: inline-block;
     width: 300px;
     height: auto;
-    margin-right: 10px;
     margin-top: 10px;
     padding: 10px;
+    vertical-align: top;
 }
 #footer{
     line-height: 100px;
@@ -84,17 +90,52 @@ body{
     width:100%;
     height: 100px;
     background: #23283d;
-    opacity: 0.9;
+    color: #ffffff;
 }
 .block{
     margin-bottom: 40px;
     padding: 10px;
     height:auto;
-    box-shadow: 0px 2px 1px #333;
+    background: #ffffff;
+    border:1px solid #e1e1e1;
 }
 .block-title{
     padding: 10px;
     font-weight: normal;
     border-bottom: 1px solid #999;
     margin-bottom: 10px;
+}
+#category{
+    color: #ffffff;
+    background: #ffffff;
+}
+#search-button{
+    width: 55px;
+}
+#searchform>div input{
+    width: 190px;
+}
+
+
+.center-to-head{
+    position:relative;
+}
+.center-to-head::after{
+    content:'';
+    display:block;
+    /*开始时候下划线的宽度为100%*/
+    width:100%;
+    height:3px;
+    position:absolute;
+    bottom:-5px;
+    background:#000;
+    transition:all 0.3s ease-in-out;
+    /*通过transform的缩放scale来让初始时x轴为0*/
+    transform: scale3d(0,1,1);
+    /*将坐标原点移到元素的中间，以原点为中心进行缩放*/
+    transform-origin:50% 0;
+}
+.center-to-head:hover::after{
+    /*鼠标经过时还原到正常比例*/
+    transform:scale3d(1,1,1);
 }
